# Diagnosticism.Rust

./: .gitignore  .rustfmt.toml  CHANGES.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  TODO.md  rustfmt.toml
.cursor/rules/: rust-standards.mdc
.github/workflows/: ci.yml
benches/: doomgram.rs  time_format.rs
examples/: debug_squeezer.md  debug_squeezer.rs  doomgram.md  doomgram.rs  ellipsis.md  ellipsis.rs  flf.rs  password.md  password.rs
scripts/: check_derives.py  fmt
src/: lib.rs  macros.rs
src/diagnostics/: debug_squeezer.rs  doomgram.rs  ellipsis.rs  flf.rs  logging.rs  mod.rs  password.rs  time_format.rs
src/diagnostics/time_format/: format.rs  mod.rs  nanoseconds_str.rs
