
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "Miscellaneous discrete and simple diagnostics facilities (for Rust)"
edition = "2021"
homepage = "https://github.com/synesissoftware/Diagnosticism.Rust"
license = "BSD-3-Clause"
name = "diagnosticism"
readme = "README.md"
repository = "https://github.com/synesissoftware/Diagnosticism.Rust"
version = "0.1.0"


# ##########################################################
# Targets

[lib]
name = "diagnosticism"
path = "src/lib.rs"

[[bench]]
name = "doomgram"
harness = false

[[example]]
name = "debug-squeezer"
path = "examples/debug_squeezer.rs"

[[example]]
name = "doomgram"
path = "examples/doomgram.rs"
required-features = [
	"test-doomgram",
]

[[example]]
name = "ellipsis"
path = "examples/ellipsis.rs"

[[example]]
name = "flf"
path = "examples/flf.rs"

[[example]]
name = "password"
path = "examples/password.rs"


# ##########################################################
# Features

[features]

# General features:
#
# - "_NEVER_TO_BE_ENABLED" - this is a placeholder feature and must NEVER be specified;
# - "null-feature" - a feature that has no effect (and, thus, is useful for simplifying driver scripts);

_NEVER_TO_BE_ENABLED = []
null-feature = []


# Crate-specific features:
#

test-doomgram = [
	"dep:rand",
]


# ##########################################################
# Dependencies

[dependencies]

rand = { version = "0.9", optional = true }

[dev-dependencies]

criterion = { version = "0.5" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

